<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:elevation="5dp"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:id="@+id/btnClose2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="right"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:clickable="true"-->
<!--        android:drawableRight="@drawable/ic_close"-->
<!--        android:drawablePadding="5dp"-->
<!--        android:drawableTint="@color/gray"-->
<!--        android:text="@string/close"-->
<!--        android:textColor="@color/gray"-->
<!--        android:textSize="13sp"-->
<!--        android:textStyle="bold"-->
<!--        android:tint="@color/gray" />-->

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="start"
            android:text="@string/help_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/help_description"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/help_instruction"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnOkay"
            android:layout_width="125dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button"
            android:focusable="true"
            android:hint="@string/close"
            android:stateListAnimator="@null"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>