<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:drawableRight="@drawable/ic_close"
        android:drawablePadding="5dp"
        android:drawableTint="@color/gray"
        android:text="@string/close"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:textStyle="bold"
        android:tint="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_label"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/add_description"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etProdName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_textbox"
                android:hint="@string/enter_product_name"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/opacityGray"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etProdQuantity"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_textbox"
                android:digits="0123456789"
                android:hint="@string/enter_product_quantity"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/opacityGray"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etAddNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_textbox"
                android:gravity="start"
                android:hint="@string/addtional_notes"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/opacityGray"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button"
            android:focusable="true"
            android:stateListAnimator="@null"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>