<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/osca_logo_new"
                android:transitionName="logo_transition" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/darkGray"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/sign_in"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etOSCA"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_textbox"
                    android:hint="@string/osca_id"
                    android:imeOptions="flagNoExtractUi"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/opacityGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_textbox"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/opacityGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:clickable="true"
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_button"
                android:focusable="true"
                android:hint="@string/login"
                android:stateListAnimator="@null"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:text="Copyright © 2020"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>